--- a/Saa/Info.plist
+++ b/Saa/Info.plist
@@ -28,6 +28,10 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Your location is required to display the data</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Your location is required to display the data</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
